--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
 <div class="navbar">
-  <img src="PHOTO/logo.png" class="logo">
+  <img src="logo.png" class="logo">
   <nav>
     <ul>
       <li><a href="">HOME</a></li>
@@ -17,7 +17,7 @@
       <li><a href="">ABOUT</a></li>
     </ul>
   </nav>
-  <img src="PHOTO/menu.png" class="menu-icon">
+  <img src="menu.png" class="menu-icon">
 </div>
 <div class="row">
   <div class="col">
